# Voxel_Engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
assets/shaders/: basic.frag  basic.vsh  light_source.frag  light_source.vert  shaders.yaml
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: Main.cpp  pch.cpp  pch.h
src/core/: Application.cpp  Application.h  Input.cpp  Input.h  ThreadPool.cpp  ThreadPool.h  Window.cpp  Window.h
src/events/: Event.h  EventApplication.h  EventDispatcher.cpp  EventDispatcher.h  EventKeyboard.h  EventMouse.h
src/gfx/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  GraphicContext.cpp  GraphicContext.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h
src/gui/: DebugGUI.cpp  DebugGUI.h  GUI.cpp  GUI.h  InfoWindow.cpp  InfoWindow.h  ViewportGUI.cpp  ViewportGUI.h
src/utils/: Color.h  File.cpp  File.h  Log.cpp  Log.h  Monitor.cpp  Monitor.h  Time.cpp  Time.h
src/world/: Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  Cube.cpp  Cube.h  Player.cpp  Player.h  Sun.cpp  Sun.h  World.cpp  World.h
